<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtValor"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edt_rounded"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_valor"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="216dp"
        android:layout_height="57dp"
        android:layout_marginTop="236dp"
        android:autofillHints=""
        android:background="@drawable/edt_rounded"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_nome"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtURL"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edt_rounded"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_url"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtValor" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="216dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#C23760E6"
        android:text="@string/btn_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtURL" />

    <TextView
        android:id="@+id/txtLista"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_remember"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />

    <View
        android:id="@+id/viewSuperior"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/shape_back_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewInfe"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/shape_back_botton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:minHeight="48dp"
        android:text="Tema Escuro"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/viewInfe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>